--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ nav {
     color: rgb(255, 255, 255);
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
 nav .mainMenu {
@@ -48,7 +52,7 @@ nav .mainMenu li a{
     text-decoration: none;
     color: #ccff66;
     font-weight: bold;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
 }
 
 nav .mainMenu li a:hover{
@@ -91,7 +95,7 @@ nav .logo{
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background: #ccff66;
+        background: #18386a;
         transition: top 1s ease;
         display: none;
     }
@@ -114,4 +118,90 @@ nav .logo{
 #imgLogo{
     max-width:300px;
     min-width: 100px;
+}
+
+
+/* paralax 1 */
+
+#banner{
+    background-image: url("https://miskayboutique.com/wp-content/uploads/2020/03/Hero-Banner-Placeholder-Dark-1024x480-1.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    align-items: center;
+    text-align: center;
+    min-height: 500px;
+    padding: 20px;
+    padding-top:200px;
+}
+
+.parallaxA {
+    /* The image used */
+    background-image: url("https://cdn-media-1.freecodecamp.org/images/wru4xpNDHyRR3JMz1eIvgtGAQHLjn-d8Cnui");
+
+    /* Set a specific height */
+    min-height: 300px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.parallaxB {
+    /* The image used */
+    background-image: url("https://anbc.org.br/wp-content/uploads/2015/12/placeholder.gif");
+
+    /* Set a specific height */
+    min-height: 300px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.textos{
+    align-items: center;
+    text-align: justify;
+    padding: 50px 0px;
+    margin: auto 10%;
+}
+
+@media only screen and (max-device-width: 800px) {
+    .parallax {
+        background-attachment: scroll;
+    }
+}
+
+
+/* caixas responsivas do footer */
+#footer{
+    background-color: #18386a;
+}
+.centro{
+    text-align: center;
+}
+.texto{
+    text-align: justify;
+    font-size: 1.3rem;
+}
+.responsiveBox{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+    justify-content: space-evenly;
+    padding:20px;
+}
+.responsiveItem{
+    width: 250px;
+    height: 150px;
+}
+
+.responsiveItem i{
+    color: #ccff66;
 }
