--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ body{
     font-family: "Poppins", sans-serif;
 }
 
+.total{
+    width: 70%;
+    margin: auto;
+}
+
 a{
     text-decoration: none;
 }
@@ -30,7 +35,6 @@ ul{
 
 nav {
     background-color: #18386a;
-    box-shadow: 0px 0px 6px 6px #ccff66;
     color: rgb(255, 255, 255);
     display: flex;
     justify-content: space-between;
@@ -48,15 +52,15 @@ nav .mainMenu {
 nav .mainMenu li a{
     display: inline-block;
     padding: 15px;
-    padding-top: 30px;
+    padding-top: 25px;
     text-decoration: none;
-    color: #ccff66;
+    color: #fff;
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 nav .mainMenu li a:hover{
-    color: #ffffff;
+    color: #ccff66;
 }
 
 nav .openMenu{
@@ -109,8 +113,9 @@ nav .logo{
         display:block;
     }
     nav .mainMenu li a:hover{
+        transition: 0.2s;
         background: none;
-        color: rgb(45, 45, 45);
+        color: #ccff66;
         font-size: 1.6rem;
     }
 }
@@ -118,19 +123,21 @@ nav .logo{
 #imgLogo{
     max-width:300px;
     min-width: 100px;
+    margin-top:9px;
 }
 
 
 /* paralax 1 */
 
 #banner{
-    background-image: url("https://miskayboutique.com/wp-content/uploads/2020/03/Hero-Banner-Placeholder-Dark-1024x480-1.png");
+    background-image: url("assets/images/temp1.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center;
     text-align: center;
     min-height: 500px;
+    height: 700px;
     padding: 20px;
     padding-top:200px;
 }
@@ -168,6 +175,7 @@ nav .logo{
     text-align: justify;
     padding: 50px 0px;
     margin: auto 10%;
+    font-weight: bold;
 }
 
 @media only screen and (max-device-width: 800px) {
@@ -204,4 +212,111 @@ nav .logo{
 
 .responsiveItem i{
     color: #ccff66;
+}
+
+.grade2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: px;
+}
+
+.textsize{
+    font-size:1.5rem;
+    text-align:center;
+}
+.carro1{
+    width:100%;
+}
+@media screen and (max-width:860px) {
+    .grade2 {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
+    }   
+    .carro1{
+        width: 50%;
+        margin-left:25%;
+    }
+}
+
+#botao{
+    border: none;
+    padding: 12px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size:1.2rem;
+    margin-top:20px;
+    background-color: #18386a;
+    color: #ccff66;
+    transition:ease 0.3s;
+}#botao:hover{
+    background-color: #6d8fc5;
+    color: #131c03;
+    transition:ease 0.3s;
+}
+
+
+
+
+.submission-form{
+    min-width:500px;
+    margin:2rem auto;
+    border:2px solid #E74C3C;
+    padding:2rem;
+    border-radius:5px;
+    
+  }
+  label{
+    display:block;
+    padding:1rem 0 .25rem;
+    text-transform:uppercase;
+    font-size:14px;
+  }
+
+  input, textarea{
+    display:block;
+    width:100%;
+    border:2px solid #2980B9;
+    padding:.5rem;
+    font-size:18px;
+    border-radius:5px;
+  }
+
+  #sendBtn{
+    float: center;
+    border:0;
+    background:#343050;
+    padding:.5rem;
+    color:white;
+    margin:1rem auto;
+    width:auto;
+    text-transform:uppercase;
+    cursor:pointer;
+    transition:.3s ease;
+  }
+  #sendBtn:hover{
+    background:#3498DB;
+  }
+
+.formAreas{
+    width: 48%;
+    margin-bottom: 15px;
+}
+#message{
+    height: 100px;
+}
+
+.right{
+    float:right;
+}
+.left{
+    float:left;
+}
+
+.textLeft{
+    text-align:left;
+}
+.textRight{
+    text-align:right;
 }
