--- a/style.css
+++ b/style.css
@@ -320,3 +320,17 @@ nav .logo{
 .textRight{
     text-align:right;
 }
+
+.grid1{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+}
+
+.grid1 div{
+    width: 100%;
+    height: 50px;
+    margin: 60px;
+}
