--- a/style.css
+++ b/style.css
@@ -586,3 +586,54 @@ nav .logo{
     text-align: center !important;
     color: #18386a !important;
 }
+
+
+
+/*slides das imagens*/
+
+/*//////////precisa ser responsivo/////////////////*/
+.slider{
+    width: 400px!important;
+    height: 400px!important;
+    margin: auto;
+    overflow: hidden;
+}
+
+
+/*//////////precisa ser responsivo/////////////////*/
+.slides{
+    width: 400%;
+    height: 400px;
+    display: flex;
+}
+
+
+
+.slides input{
+    display: none;
+}
+
+.slide{
+    width: 25%;
+    transition: 2s;
+}
+
+/*//////////precisa ser responsivo/////////////////*/
+.slide img{
+    width: 400px;
+}
+
+
+
+#radio1:checked ~ .first{
+    margin-left: 0;
+}
+#radio2:checked ~ .first{
+    margin-left: -100%;
+}
+#radio3:checked ~ .first{
+    margin-left: -200%;
+}
+#radio4:checked ~ .first{
+    margin-left: -300%;
+}
