--- a/style.css
+++ b/style.css
@@ -637,7 +637,12 @@ nav .logo{
 #radio4:checked ~ .first{
     margin-left: -300%;
 }
-
+#radio5:checked ~ .first{
+    margin-left: -400%;
+}
+#radio6:checked ~ .first{
+    margin-left: -500%;
+}
 
 @media(max-width: 678px) {
     .slider{
